using ejs and connect-assets

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -183,5 +183,6 @@
         <script src="//cdn.oesmith.co.uk/morris-0.4.1.min.js"></script>
         <script src="//twitter.github.com/hogan.js/builds/2.0.0/hogan-2.0.0.js"></script>
         <script src="app.js"></script>
+        <%- js('main') %>
     </body>
 </html>
