--- a/views/index.ejs
+++ b/views/index.ejs
@@ -182,7 +182,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
         <script src="//cdn.oesmith.co.uk/morris-0.4.1.min.js"></script>
         <script src="//twitter.github.com/hogan.js/builds/2.0.0/hogan-2.0.0.js"></script>
-        <script src="app.js"></script>
+        <%- js('app') %>
         <%- js('main') %>
     </body>
 </html>
