update bootstrap to 3 rc

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <title>MongoDb Log Viewer</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="//cdn.oesmith.co.uk/morris-0.4.1.min.css">
         <style>
             @media (min-width: 980px) { body { padding-top: 50px; } }
@@ -41,31 +41,29 @@
     </head>
     <body>
         <div class="navbar navbar-fixed-top navbar-inverse">
-            <div class="navbar-inner">
-                <div class="container">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </a>
-                    <a class="brand" href="#">LogViewer</a>
-                    <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li class="dropdown">
-                                <a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
-                                    Level <b class="caret"></b>
-                                </a>
-                                <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-                                    <li><a href="#debug/1">Debug</a></li>
-                                    <li><a href="#info/1">Info</a></li>
-                                    <li><a href="#warn/1">Warn</a></li>
-                                    <li><a href="#error/1">Error</a></li>
-                                    <li><a href="#fatal/1">Fatal</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#dashboard">Dashboard</a></li>
-                        </ul>                        
-                    </div>
+            <div class="container">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">LogViewer</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
+                                Level <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
+                                <li><a href="#debug/1">Debug</a></li>
+                                <li><a href="#info/1">Info</a></li>
+                                <li><a href="#warn/1">Warn</a></li>
+                                <li><a href="#error/1">Error</a></li>
+                                <li><a href="#fatal/1">Fatal</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#dashboard">Dashboard</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -138,7 +136,7 @@
         <script type="text/template" id="template-detail">
             <div>
         	   <div class="row">
-                    <div class="span4">
+                    <div class="col-4">
         			    <p>{{timestamp}} ({{fromNow}})</p>
         			    <p>{{className}}</p>
         			    <b>Method:</b>
@@ -146,7 +144,7 @@
         			    <b>Message:</b>
         			    <p>{{{message}}}</p>
                     </div>
-                    <div class="span8">
+                    <div class="col-8">
                         <h4>Stats</h4>
                         <div class="js-place-for-graph" style="height: 200px;"></div>
                     </div>
@@ -176,7 +174,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.9/backbone-min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-        <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js"></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/1.7.2/moment.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/1.7.2/lang/ru.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
